<resources>
    <string name="app_name">NeatOrganizer</string>
    <string name="home_activity_menu_add">Add</string>
    <string name="activity_home_bottom_navigation_menu_search">Search</string>
    <string name="activity_home_bottom_navigation_menu_routines">Routines</string>
    <string name="activity_home_bottom_navigation_menu_tasks">Tasks</string>
    <string name="activity_home_bottom_navigation_menu_notes">Notes</string>
    <string name="activity_home_bottom_navigation_menu_timer">Timer</string>
    <string name="add_person_dialog_fragment_image_pick_error">Error while loading the image</string>
    <string name="submit_button_dialog_text">Submit</string>
    <string name="cancel_button_dialog_text">Cancel</string>
    <string name="next_button_dialog_fragment_text">next</string>
    <string name="list_item_menu_edit">Edit</string>
    <string name="list_item_menu_add">Add</string>
    <string name="list_item_menu_delete">Delete</string>
    <string name="remove_confirmation_dialog_fragment_content">Are you sure you want to delete this item?</string>
    <string name="add_task_group_dialog_fragment_content_hint">Task group title</string>
    <string name="add_note_dialog_fragment_content_hint">Note title</string>
    <string name="add_task_dialog_fragment_content_hint">Task title</string>
    <string name="add_routine_task_dialog_fragment_content_hint">Task title</string>
    <string name="add_routine_dialog_fragment_content_hint">Routine title</string>
    <string name="remove_group_subject">group</string>
    <string name="remove_routine_subject">routine</string>
    <string-array name="schedule_days_short">
        <item>Mon.</item>
        <item>Tu.</item>
        <item>Wed.</item>
        <item>Th.</item>
        <item>Fri.</item>
        <item>Sat.</item>
        <item>Sun.</item>
    </string-array>
    <plurals name="subItemsCount">
        <item quantity="one">This %2$s consists of %1$d task.</item>
        <item quantity="other">This %2$s consists of %1$d tasks.</item>
    </plurals>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="item_task_group_entry_tasks_ratio">%1$d / %2$d</string>
    <string name="task_widget_creation_color_warning">Pick a color</string>
    <string name="task_widget_creation_task_warning">Select task group</string>
    <string name="note_widget_creation_task_warning">Select note</string>
    <string name="widget_tasks_empty_view_message">No items to show</string>
    <string name="task_group_selection_title">Select new task group</string>
    <string name="note_selection_title">Select new note</string>
    <string name="item_person_description">Sample description goes in here</string>
    <string name="task_widget_missing_content_message">Task group is missing…\nTap to select new one!</string>
    <string name="note_widget_missing_content_message">Note is missing…\nTap to select new one!</string>
    <string name="item_note_creation_date_prefix">Created on %1$s</string>
    <string name="add_routine_dialog_scheduled_days">Scheduled days</string>
    <string name="add_note_dialog_fragment_color_header">Note color</string>
    <string name="widget_note_configuration_title">Select the note</string>
    <string name="task_widget_untitled_hint">Untitled task group</string>
    <string name="bar_note_untitled_hint">Untitled note</string>
</resources>
