<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_entry"
        android:icon="@drawable/ic_add_white_24"
        android:orderInCategory="98"
        android:title="@string/list_item_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_group_title"
        android:icon="@drawable/ic_edit_white_24"
        android:orderInCategory="99"
        android:title="@string/list_item_menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save_group_title"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="100"
        android:title="@string/home_activity_menu_add"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>